--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "commonjs",
     "noImplicitAny": true,
     "removeComments": true,
+    "experimentalDecorators": true,
     "preserveConstEnums": true,
     "outDir": "./build",
     "sourceMap": true,
