--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@types/es6-promise": "0.0.32",
     "@types/jest": "^16.0.0",
+    "@types/lodash": "^4.14.39",
     "@types/node": "^6.0.48",
     "jest-cli": "^17.0.3",
     "typescript": "^2.0.10"
@@ -35,6 +36,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.7.4",
+    "lodash": "^4.17.2",
     "randomstring": "^1.1.5"
   }
 }
