clean up package.json

--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "dynanode",
-  "version": "1.0.0",
-  "description": "Dynanode is a wrapper around the AWS DynamoDB sdk for node. There are  a lot of similar libraries out there, but they all seem to try to  transform DynamoDB into a more familiar database, such as Mongo. This api's goal is to make it easier to work with the AWS sdk while staying true to the  DynamoDB way of doing things. We will use the termonology set forth in the sdk. For every method, we will show you how to do it with the sdk, and then how you do it with dynanode.",
-  "main": "index.js",
+  "version": "0.1.0",
+  "description": "Dynanode is a DynamoDB client for node that was inspired by RethinkDB's syntax.",
+  "main": "build/dynanode.js",
   "scripts": {
+    "prepublish": "tsc",
     "test": "NODE_ENV=test; jest --watch",
     "test-once": "NODE_ENV=test; jest"
   },
@@ -11,8 +12,8 @@
     "type": "git",
     "url": "git+ssh://git@gitlab.com/trevorhanus/dynanode.git"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Gravity Labs",
+  "license": "BSD",
   "bugs": {
     "url": "https://gitlab.com/trevorhanus/dynanode/issues"
   },
