--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,8 @@ pages:
   image: devunix/alpine-mkdocs
   script:
   - mkdocs build
+  - mkdir public
+  - mv site public
   artifacts:
     paths:
     - site
