--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ pages:
   image: devunix/alpine-mkdocs
   script:
   - mkdocs build
-  - cp /builds/trevorhanus/dynanode/site/* public
+  - cp -r /builds/trevorhanus/dynanode/site/* public
   artifacts:
     paths:
     - site
