--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "pretty": true,
     "typeRoots": [
       "node_modules/@types",
-      "dynanode.d.ts"
+      "fluent.d.ts"
     ]
   },
   "include": [
