--- a/.npmignore
+++ b/.npmignore
@@ -1,18 +1,11 @@
-# Typescript Source files
-/src
-tsconfig.json
-preprocessor.js
-
-# Docs
-/Docs
-
-# Tests
-/__tests__
-
 /.idea
-
-yarn.lock
-.sample-env
-.env
-
+/__test__
+/docs
 node_modules/
+/src
+.env
+.gitlab-ci.yml
+.sample-env
+preprocessor.js
+tsconfig.json
+yarn.lock
