--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "dynaflo",
-    "version": "0.5.0",
+    "version": "0.5.0-alpha",
     "description": "Dynaflo makes working with DynamoDB easier.",
     "author": "Trevor Hanus",
     "license": "BSD",
